--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,10 +21,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Install Hugo CLI
-        run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.91.2'
           
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.5.1
@@ -32,7 +32,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-        
       - name: Build with Hugo
         run: npm run build
         
