--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,10 +24,12 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.91.2'
+          hugo-version: '0.105.0'
           
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.5.1
+        with:
+          node-version: '18.x'
           
       - name: Checkout
         uses: actions/checkout@v3
