--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,7 @@ concurrency:
 
 jobs:
   # Build job
+  name: Build
   build:
     runs-on: ubuntu-latest
     
@@ -39,7 +40,9 @@ jobs:
           path: dist
     
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
+    needs: build
     env:
       CLOUDFLARE_API_TOKEN: ${{ secrets.CF_TOKEN }}
     steps:
