--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -57,7 +57,7 @@ jobs:
 
       - run: |
           npm install -g wrangler 
-          npx wrangler pages deployment create dist --project-name=blog
+          npx wrangler pages deployment create . --project-name=blog
 
 
 
