--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "puppeteer-core": "^19.2.2",
     "@types/sharp": "^0.31.0",
     "csv-parse": "^5.3.2",
+    "puppeteer-core": "^19.2.2",
     "zx": "^7.1.1"
+  },
+  "dependencies": {
+    "benchmark": "^2.1.4"
   }
 }
