--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,36 +15,29 @@ jobs:
     env:
       PUPPETEER_EXEC_PATH: "/usr/bin/chromium"
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3.5.1
-      - run: sudo snap install chromium
-      - run: sudo snap install hugo
-      - run: npm i -g zx
-      - run: npm install
-      - run: npm run build
-      - uses: actions/upload-artifact@v3
+      - uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+
+      - name: Install Chromium and Hugo
+        run: sudo snap install chromium hugo
+      
+      - name: Install Zx
+        run: npm i -g zx
+
+      - name: Install Deps
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+
+      - name: Deploy to CloudFlare
+        uses: cloudflare/wrangler-action@v3
         with:
-          name: blog-build
-          path: dist
-    
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: build
-    env:
-      CLOUDFLARE_API_TOKEN: ${{ secrets.CF_TOKEN }}
-    steps:
-      - uses: actions/setup-node@v3.5.1
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: blog-build
-      - run: ls -la
-      - run: |
-          npm install -g wrangler 
-          npx wrangler pages deployment create . --project-name=blog
-
-
-
-  
+          apiToken: ${{ secrets.CF_TOKEN }}
+          environment: production
+          command: |
+            pages deploy ./dist --project-name=blog
   
