--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "npx serve dist",
     "dev": "hugo server --buildDrafts",
     "build": "hugo --destination dist --minify",
-    "postbuild": "npx zx ./scripts/generateThumbs.mjs"
+    "postbuild": "./scripts/gen-thumbs.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "csv-parse": "^5.3.2",
-    "puppeteer-core": "^19.2.2",
-    "zx": "^7.1.1"
+    "@types/node": "^22.12.0",
+    "fast-xml-parser": "^4.5.1",
+    "puppeteer-core": "24.1.1",
+    "tsx": "4.19.2"
   }
 }
