--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,6 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_TOKEN }}
-          environment: production
           command: |
-            pages deploy ./dist --project-name=blog
+            pages deploy ./dist --project-name=blog --branch=main
   
